--- a/index.html
+++ b/index.html
@@ -197,7 +197,20 @@
                 <div class="team-grid">
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="images/team/img1.jpeg" alt="Ms. Neetu Sharma" loading="lazy">
+                            <img src="images/team/img1.jpeg" alt="Ms. Amit Sharma" loading="lazy">
+                        </div>
+                        <div class="team-info">
+                            <h3 class="team-name">Mr. Amit Sharma</h3>
+                            <p class="team-role">Director</p>
+                            <p class="team-description">
+                                Providing strategic leadership and vision to drive company growth and operational excellence.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="team-card">
+                        <div class="team-image">
+                            <img src="images/team/img2.jpeg" alt="Ms. Neetu Sharma" loading="lazy">
                         </div>
                         <div class="team-info">
                             <h3 class="team-name">Ms. Neetu Sharma</h3>
@@ -210,26 +223,13 @@
 
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="images/team/img2.jpeg" alt="Mr. Mohit Sharma" loading="lazy">
+                            <img src="images/team/img3.jpeg" alt="Mr. Mohit Sharma" loading="lazy">
                         </div>
                         <div class="team-info">
                             <h3 class="team-name">Mr. Mohit Sharma</h3>
-                            <p class="team-role">Quality Control Manager</p>
+                            <p class="team-role"> Quality Control Manager</p>
                             <p class="team-description">
                                 Ensuring the highest standards of food safety and quality across all our catering operations.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="team-card">
-                        <div class="team-image">
-                            <img src="images/team/img3.jpeg" alt="Mr. Amit Sharma" loading="lazy">
-                        </div>
-                        <div class="team-info">
-                            <h3 class="team-name">Mr. Amit Sharma</h3>
-                            <p class="team-role">Director</p>
-                            <p class="team-description">
-                                Providing strategic leadership and vision to drive company growth and operational excellence.
                             </p>
                         </div>
                     </div>
