--- a/index.html
+++ b/index.html
@@ -146,21 +146,21 @@
                 <div class="gallery-container">
                     <div class="gallery-slider" id="gallerySlider">
                         <div class="gallery-item">
-                            <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?w=800&h=400&fit=crop&auto=format" alt="Self-service canteen with food counter" loading="lazy">
+                            <img src="images/img1.jpeg" alt="Self-service canteen with food counter" loading="lazy">
                             <div class="gallery-overlay">
                                 <h4>Self-Service Canteen</h4>
                                 <p>Modern self-service setup for efficient meal distribution</p>
                             </div>
                         </div>
                         <div class="gallery-item">
-                            <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?w=800&h=400&fit=crop&auto=format" alt="Traditional serving dishes with Indian cuisine" loading="lazy">
+                            <img src="images/img2.jpeg" alt="Traditional serving dishes with Indian cuisine" loading="lazy">
                             <div class="gallery-overlay">
                                 <h4>Traditional Presentation</h4>
                                 <p>Authentic flavors in elegant serving</p>
                             </div>
                         </div>
                         <div class="gallery-item">
-                            <img src="https://images.unsplash.com/photo-1567620905732-2d1ec7ab7445?w=800&h=400&fit=crop&auto=format" alt="Cafeteria-style food service setup" loading="lazy">
+                            <img src="images/img3.jpeg" alt="Cafeteria-style food service setup" loading="lazy">
                             <div class="gallery-overlay">
                                 <h4>Cafeteria Service</h4>
                                 <p>Efficient service for daily operations</p>
@@ -210,7 +210,7 @@
 
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="images/team/img2.jpeg" alt="Ms. Neetu Sharma" loading="lazy">
+                            <img src="images/team/img3.jpeg" alt="Ms. Neetu Sharma" loading="lazy">
                         </div>
                         <div class="team-info">
                             <h3 class="team-name">Ms. Neetu Sharma</h3>
@@ -223,7 +223,7 @@
 
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="images/team/img3.jpeg" alt="Mr. Mohit Sharma" loading="lazy">
+                            <img src="images/team/img2.jpeg" alt="Mr. Mohit Sharma" loading="lazy">
                         </div>
                         <div class="team-info">
                             <h3 class="team-name">Mr. Mohit Sharma</h3>
@@ -288,43 +288,7 @@
             </div>
         </header>
 
-        <main class="page-content">
-            <div class="container">
-                <div class="contact-grid">
-                    <div class="contact-form-container">
-                        <div class="card">
-                            <h2 class="form-title">Send us a Message</h2>
-                            <form class="contact-form" id="contactForm">
-                                <div class="form-row">
-                                    <div class="form-group">
-                                        <label for="firstName">First Name</label>
-                                        <input type="text" id="firstName" name="firstName" class="form-input" required>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="lastName">Last Name</label>
-                                        <input type="text" id="lastName" name="lastName" class="form-input" required>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="email">Email Address</label>
-                                    <input type="email" id="email" name="email" class="form-input" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="phone">Phone Number</label>
-                                    <input type="tel" id="phone" name="phone" class="form-input">
-                                </div>
-                                <div class="form-group">
-                                    <label for="subject">Subject</label>
-                                    <input type="text" id="subject" name="subject" class="form-input" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="message">Message</label>
-                                    <textarea id="message" name="message" class="form-textarea" rows="5" required></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-primary btn-full">Send Message</button>
-                            </form>
-                        </div>
-                    </div>
+      
 
                     <div class="contact-info-container">
                         <div class="card">
@@ -383,17 +347,6 @@
                     <p class="footer-text">
                         Empowering institutions through reliable catering solutions and operational excellence, delivering nutritious meals with care and commitment across India.
                     </p>
-                    <div class="social-links">
-                        <a href="#" class="social-link" aria-label="Facebook">
-                            <i class="fab fa-facebook"></i>
-                        </a>
-                        <a href="#" class="social-link" aria-label="LinkedIn">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                        <a href="#" class="social-link" aria-label="Twitter">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                    </div>
                 </div>
 
                 <div class="footer-section">
